--- a/index.html
+++ b/index.html
@@ -631,147 +631,147 @@
         <h2 class="category-header">Cheerleading</h2>
         <div class="category-content">
   <div class="portfolio-item">
-                <img src="cheer/CHEER01.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER01.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER01</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER02.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER02.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER02</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER03.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER03.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER03</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER04.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER04.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER04</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER05.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER05.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER05</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER06.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER06.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER06</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER07.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER07.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER07</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER08.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER08.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER08</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER09.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER09.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER09</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER10.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER10.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER10</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER11.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER11.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER11</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER12.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER12.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER12</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER13.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER13.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER13</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER14.JPG" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER14.JPG" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER14</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER15.jpg" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER15.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER15</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER16.jpg" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER16.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER16</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER17.jpg" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER17.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER17</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER18.jpg" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER18.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER18</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER19.jpg" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER19.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER19</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER20.jpg" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER20.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER20</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
                 </div>
             </div>
   <div class="portfolio-item">
-                <img src="cheer/CHEER21.jpg" alt="indego" class="portfolio-image">
+                <img src="cheer/CHEER21.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER21</h2>
                     <p>Pictures take of me cheering for the NCL USA Cricket League</p>
