--- a/index.html
+++ b/index.html
@@ -732,49 +732,49 @@
                 <img src="cheer/CHEER15.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER15</h2>
-                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                    <p>Pictures take of me taken for UTDallas Cheer and Spirit</p>
                 </div>
             </div>
   <div class="portfolio-item">
                 <img src="cheer/CHEER16.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER16</h2>
-                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                    <p>Pictures take of me taken for UTDallas Cheer and Spirit</p>
                 </div>
             </div>
   <div class="portfolio-item">
                 <img src="cheer/CHEER17.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER17</h2>
-                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                    <p>Pictures take of me taken for UTDallas Cheer and Spirit</p>
                 </div>
             </div>
   <div class="portfolio-item">
                 <img src="cheer/CHEER18.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER18</h2>
-                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                    <p>Pictures take of me taken for UTDallas Cheer and Spirit</p>
                 </div>
             </div>
   <div class="portfolio-item">
                 <img src="cheer/CHEER19.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER19</h2>
-                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                    <p>Pictures take of me taken for UTDallas Cheer and Spirit</p>
                 </div>
             </div>
   <div class="portfolio-item">
                 <img src="cheer/CHEER20.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER20</h2>
-                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                    <p>Pictures take of me taken for UTDallas Cheer and Spirit</p>
                 </div>
             </div>
   <div class="portfolio-item">
                 <img src="cheer/CHEER21.jpg" alt="cheer" class="portfolio-image">
                 <div class="content">
                     <h2>CHEER21</h2>
-                    <p>Pictures take of me cheering for the NCL USA Cricket League</p>
+                    <p>Pictures take of me taken for UTDallas Cheer and Spirit</p>
                 </div>
             </div>
 
