--- a/index.html
+++ b/index.html
@@ -784,18 +784,39 @@
      <div class="category">
         <h2 class="category-header">Fashion Show</h2>
         <div class="category-content">
-            <div class="portfolio-item">
-                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+ <div class="portfolio-item">
+                <img src="fashionshow/FASHIONSHOW01.png" alt="Fashion" class="portfolio-image">
                 <div class="content">
-                    <h2>Isolated</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                    <h2>FASHIONSHOW01</h2>
+                    <p>These are pictures of me modeling a designers clothes</p>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+ <div class="portfolio-item">
+                <img src="fashionshow/FASHIONSHOW02.png" alt="Fashion" class="portfolio-image">
                 <div class="content">
-                    <h2>Hypnosis</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                    <h2>FASHIONSHOW02</h2>
+                    <p>These are pictures of me modeling a designers clothes</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="fashionshow/FASHIONSHOW03.png" alt="Fashion" class="portfolio-image">
+                <div class="content">
+                    <h2>FASHIONSHOW03</h2>
+                    <p>These are pictures of me modeling a designers clothes</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="fashionshow/FASHIONSHOW04.png" alt="Fashion" class="portfolio-image">
+                <div class="content">
+                    <h2>FASHIONSHOW04</h2>
+                    <p>These are pictures of me modeling a designers clothes</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="fashionshow/FASHIONSHOW05.png" alt="Fashion" class="portfolio-image">
+                <div class="content">
+                    <h2>FASHIONSHOW05</h2>
+                    <p>These are pictures of me modeling a designers clothes</p>
                 </div>
             </div>
         </div>
