--- a/index.html
+++ b/index.html
@@ -788,35 +788,35 @@
                 <img src="fashionshow/FASHIONSHOW01.png" alt="Fashion" class="portfolio-image">
                 <div class="content">
                     <h2>FASHIONSHOW01</h2>
-                    <p>These are pictures of me modeling a designers clothes</p>
+                    <p>These are pictures of me modeling a designers clothes at UTDallas</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="fashionshow/FASHIONSHOW02.png" alt="Fashion" class="portfolio-image">
                 <div class="content">
                     <h2>FASHIONSHOW02</h2>
-                    <p>These are pictures of me modeling a designers clothes</p>
+                    <p>These are pictures of me modeling a designers clothes at UTDallas</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="fashionshow/FASHIONSHOW03.png" alt="Fashion" class="portfolio-image">
                 <div class="content">
                     <h2>FASHIONSHOW03</h2>
-                    <p>These are pictures of me modeling a designers clothes</p>
+                    <p>These are pictures of me modeling a designers clothes at UTDallas</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="fashionshow/FASHIONSHOW04.png" alt="Fashion" class="portfolio-image">
                 <div class="content">
                     <h2>FASHIONSHOW04</h2>
-                    <p>These are pictures of me modeling a designers clothes</p>
+                    <p>These are pictures of me modeling a designers clothes at UTDallas</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="fashionshow/FASHIONSHOW05.png" alt="Fashion" class="portfolio-image">
                 <div class="content">
                     <h2>FASHIONSHOW05</h2>
-                    <p>These are pictures of me modeling a designers clothes</p>
+                    <p>These are pictures of me modeling a designers clothes at UTDallas</p>
                 </div>
             </div>
         </div>
