--- a/index.html
+++ b/index.html
@@ -825,18 +825,116 @@
      <div class="category">
         <h2 class="category-header">My 18th Birthday</h2>
         <div class="category-content">
-            <div class="portfolio-item">
-                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY01.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
-                    <h2>Isolated</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                    <h2>BIRTHDAY01</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY02.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
-                    <h2>Hypnosis</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                    <h2>BIRTHDAY02</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY03.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY03</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY04.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY04</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>            
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY05.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY05</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY06.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY06</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY07.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY07</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY08.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY08</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY09.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY09</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY10.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY10</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY11.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY11</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY12.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY12</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY13.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY13</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY14.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY14</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY15.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY15</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                </div>
+            </div>
+<div class="portfolio-item">
+                <img src="birthday/BIRTHDAY16.JPG" alt="Birthday" class="portfolio-image">
+                <div class="content">
+                    <h2>BIRTHDAY16</h2>
+                    <p>These are pictures taken of me having a birthday photoshoot</p>
                 </div>
             </div>
         </div>
