--- a/index.html
+++ b/index.html
@@ -943,20 +943,181 @@
      <div class="category">
         <h2 class="category-header">Arizona</h2>
         <div class="category-content">
-            <div class="portfolio-item">
-                <img src="Shrimpy.png" alt="image7" class="portfolio-image">
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA01.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
-                    <h2>Isolated</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Emphasis and Focal Point.</p>
+                    <h2>ARIZONA01</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
                 </div>
             </div>
-            <div class="portfolio-item">
-                <img src="figure&ground.jpg" alt="image8" class="portfolio-image">
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA02.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
-                    <h2>Hypnosis</h2>
-                    <p>(digital) This was classwork for Showing the abilities of Figure and Ground.</p>
+                    <h2>ARIZONA02</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
                 </div>
             </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA03.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA03</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA04.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA04</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA05.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA05</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA06.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA06</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA07.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA07</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA08.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA08</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA09.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA09</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA10.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA10</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA11.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA11</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA12.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA12</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA13.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA13</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA14.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA14</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA15.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA15</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA16.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA16</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA17.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA17</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA18.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA18</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA19.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA19</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA20.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA20</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA21.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA21</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA22.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA22</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA23.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA23</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA24.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA24</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>
+ <div class="portfolio-item">
+                <img src="arizona/ARIZONA25.jpg" alt="arizona" class="portfolio-image">
+                <div class="content">
+                    <h2>ARIZONA25</h2>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                </div>
+            </div>  
         </div>
     </div>
 
