--- a/index.html
+++ b/index.html
@@ -829,112 +829,112 @@
                 <img src="birthday/BIRTHDAY01.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY01</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY02.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY02</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY03.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY03</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY04.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY04</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>            
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY05.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY05</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY06.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY06</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY07.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY07</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY08.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY08</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY09.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY09</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY10.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY10</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY11.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY11</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY12.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY12</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY13.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY13</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY14.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY14</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY15.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY15</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
 <div class="portfolio-item">
                 <img src="birthday/BIRTHDAY16.JPG" alt="Birthday" class="portfolio-image">
                 <div class="content">
                     <h2>BIRTHDAY16</h2>
-                    <p>These are pictures taken of me having a birthday photoshoot</p>
+                    <p>These are pictures taken of me having a birthday photoshoot, edits done by me</p>
                 </div>
             </div>
         </div>
@@ -947,175 +947,175 @@
                 <img src="arizona/ARIZONA01.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA01</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA02.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA02</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA03.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA03</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA04.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA04</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA05.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA05</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA06.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA06</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA07.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA07</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA08.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA08</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA09.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA09</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA10.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA10</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA11.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA11</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA12.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA12</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA13.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA13</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA14.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA14</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA15.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA15</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA16.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA16</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA17.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA17</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA18.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA18</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA19.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA19</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA20.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA20</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA21.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA21</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA22.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA22</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA23.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA23</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA24.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA24</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>
  <div class="portfolio-item">
                 <img src="arizona/ARIZONA25.jpg" alt="arizona" class="portfolio-image">
                 <div class="content">
                     <h2>ARIZONA25</h2>
-                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish</p>
+                    <p>These are pictures taken of me at the Grand Canyon National Park being stylish, edits done by me</p>
                 </div>
             </div>  
         </div>
