--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 </head>
 <body>
     <header>
-        <h1>Grouped Artwork Portfolio</h1>
+        <h1>Model work Portfolio</h1>
     </header>
 
     <!-- Categories -->
